8009731: Confusing error message for loader constraint violation

Fix text, overwritten type and holder for resolved method

Reviewed-by: coleenp, dcubed, minqi, dholmes